Fixing layout issues

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ color: white;
 }
 
 #resourcenavbar {
-width: 400px;
+width: 600px;
 /*height: 150px;*/
 margin-left: auto;
 margin-right: auto;
@@ -108,7 +108,7 @@ margin-bottom: 100px;
 }
 
 .resourcenav {
-width: 200px;
+width: 300px;
 /*height: 150px;*/
 float: left;
 display: none;
